--- a/css/estilo.css
+++ b/css/estilo.css
@@ -38,27 +38,6 @@ body {
 
 }
 
-.branco  {
-	color: #FFF;
-
-}
-
-.data-postagem {
-	font-size: 0.8em;
-	border-bottom: 1px solid #f4f4f4;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	display: block;
-	
-
-}
-
-.postagem-lateral {
-	font-size: 0.8em;
-	padding: 5px;
-/*	border-bottom:  1px dotted #CCC;*/
-}
-
 
 
 #area-postagens {
@@ -87,12 +66,52 @@ body {
 
 }
 
+
+.postagem-lateral {
+	font-size: 0.8em;
+	padding: 5px;
+	border-bottom:  1px dotted #CCC;
+}
+
+
 #rodape {
 	clear: both;
 	text-align: center;
 	padding: 15px;
 	background: #CCC;
 }
+
+
+
+/*
+****   Formatações Do Menu   ****
+*/
+
+a {
+	text-decoration: none;
+}
+
+ a:link,  a:visited {
+	color: #f7b600;
+	
+}
+ a:hover  {
+	text-decoration: underline;
+}
+
+
+#area-cabecalho a:link, #area-cabecalho a:visited {
+	color: #FFF;
+	padding: 8px 12px;
+}
+
+#area-cabecalho a:hover  {
+	color: #f7b600;
+	background: #FFF; 
+	text-decoration: none;
+
+}
+
 
 /*
 ****   Formatações Gerais   ****
@@ -116,38 +135,18 @@ h3 {
 	padding: 5px;
 }
 
-
-
-
-
-/*
-****   Formatações Do Menu   ****
-*/
-
-a {
-	text-decoration: none;
-}
-
- a:link,  a:visited {
-	color: #f7b600;
-	
-}
- a:hover  {
-	text-decoration: underline;
-}
-
-
-#area-cabecalho a:link, #area-cabecalho a visited {
-	color: #FFF;
-	padding: 8px 12px;
-}
-#area-cabecalho a:hover  {
-	color: #f7b600;
-	background: #FFF; 
-	text-decoration: none;
+.branco  {
+	color: white;
 
 }
 
+.data-postagem {
+	font-size: 0.8em;
+	border-bottom: 1px solid #f4f4f4;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	display: block;
+}
 
 
 
